@@ -37,8 +37,6 @@ import static org.assertj.core.api.Assertions.assertThat;
  *
  * @author Andy Wilkinson
  */
-@SuppressWarnings("removal")
-@Deprecated(since = "3.0.0", forRemoval = true)
 class DefaultWebFluxTagsProviderTests {
 
 	@Test
@@ -74,7 +72,7 @@ class DefaultWebFluxTagsProviderTests {
 
 		@Override
 		public Iterable<Tag> httpRequestTags(ServerWebExchange exchange, Throwable ex) {
-			return this.tagNames.stream().map((name) -> Tag.of(name, "value")).toList();
+			return this.tagNames.stream().map((name) -> Tag.of(name, "value")).collect(Collectors.toList());
 		}
 
 	}
